opam-version: "1.2"
name: "mindstorm-ev3"
version: "0.0.2"
maintainer: "Anders Fugmannr <anders@fugmann.net>"
authors: [ "Anders Fugmann" ]
license: "BSD3"
homepage: "https://github.com/andersfugmann/mindstorm-ev3/"
dev-repo: "https://github.com/andersfugmann/mindstorm-ev3.git"
bug-reports: "https://github.com/andersfugmann/mindstorm-ev3/issues"
build: ["jbuilder" "build"]
install: ["jbuilder" "install"]
remove: ["jbuilder" "uninstall"]

depends: [
  "jbuilder" {build}
  "ctypes"
  "ctypes-foreign"
  "hex"
  "core"
  "base"
  "ocplib-endian"
]
available: [ ocaml-version >= "4.05" ]
depexts: [
  [ [ "debian"  ] [ "libbluetooth-dev" ] ]
  [ [ "ubuntu"  ] [ "libbluetooth-dev" ] ]
]
